# mori

./: .gitignore  current_folder_tree.md  lets_go.sh  package-lock.json  pyproject.toml
backend/: Dockerfile  go.mod  go.sum  server.go
backend/logic_llm/: llm_manager.py  server.py  test_new_server.py  test_token.py
backend/middleware/: functions_token.go  manage_conversation.go
backend/pkg/handlers/: captcha.go  dropFile.go  groups.go  handler.go  llm_convos.go  logout.go  messages.go  middleware.go  notifications.go  register.go  resetpassword.go  signin.go  users.go  verifyEmail.go  websocket.go
backend/pkg/middleware/: ratelimit.go
backend/pkg/models/: llm_convo.go  message.go  notification.go  storage.go  user.go
backend/pkg/utils/: images.go  notifications.go  response.go  session.go  utils.go  validation.go
backend/pkg/wsServer/: wsClient.go  wsMessage.go  wsServer.go
backend/test/: server_test.go
docs/: InitDB.md  injectionsGolangSQL.md  run.md  server.md  test.md  vue.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/login/: login.css  login.html  login.js
frontend/src/: App.vue
frontend/src/components/: ChatHistory.vue  Chatbot.vue  ChatbotConversation.vue  ContactsForChatBoxView.vue  FileUpload.vue  Followers.vue  Following.vue  Group.vue  GroupMembers.vue  Modal.vue  MultiselectDropdown.vue  NavBarOn.vue  NewGroup.vue  NotificationMsg.vue  Notifications.vue  PrivacyBtn.vue  Profile.vue  Register.vue  Search.vue  Sidebar.vue  SignIn.vue  UpgradeIA.vue
frontend/src/router/: index.js
(+34 files in other folders)
